--- a/src/components/Export/Export.css
+++ b/src/components/Export/Export.css
@@ -34,7 +34,7 @@ margin-left: 6rem;
     }
 
     @media (max-width:992px){
-        padding:3rem 0;
+        padding:1rem 0 3rem 0;
     }
 
     .title_headling{
@@ -50,7 +50,6 @@ margin-left: 6rem;
         @media(max-width:992px){
             padding: 0;
             margin: 0;
-        
         }
         & h3{
             width:90%;
@@ -62,11 +61,12 @@ margin-left: 6rem;
 
             @media (max-width:767px){
                 width:100%;
-                font-size:1.8rem;
+                font-size:1.5rem;
                 line-height: 2.8rem;
                 margin: 0;
                 padding: 0;
-                margin-left: 2rem;
+                
+                /* margin-left: 0.2rem; */
             }
         }
         & p{
@@ -77,7 +77,9 @@ margin-left: 6rem;
 
             @media (max-width:767px){
                 width:100%;
-                margin-left: 1.6rem;
+                /* margin: 4px; */
+                /* font-size: 1rem; */
+                /* margin-left: 02rem; */
             }
         }
     }
@@ -92,6 +94,7 @@ margin-left: 6rem;
         @media (max-width:767px){
             flex-direction: column;
             padding: 0;
+            /* top: 0; */
             /* margin: 0; */
         }
         
@@ -109,6 +112,8 @@ margin-left: 6rem;
                 width:100%;
                 font-size:1.8rem;
                 line-height: 2.8rem;
+                margin: 0;
+                padding: 0;
             }
         }
         
@@ -222,6 +227,9 @@ margin:0 2rem;
                 color:var(--primary-nav-color);
 
                 font-weight: 500;
+                @media(max-width: 992px){
+                    font-size: 1.3rem;
+                }
             }
             .read{
                 font-size:1rem;
@@ -243,25 +251,26 @@ margin:0 2rem;
         padding-left: 15rem;
         border-right: 25px;
         /* background-color: black; */
-        border-color: black;
+        border-color:var( --secondary-color);
         margin-bottom: 6rem;
         margin-top: 4rem;
         /* margin: 1rem; */
         @media(max-width:992px){
             margin: 0;
             padding: 0;
-            margin-top: 4rem;
+            margin-top: 3rem;
         }
         .heoonee img{
             width: 40%;
             /* height: 20%; */
             display: flex;
-         border-right: 7px solid black;
-         border-bottom: 7px solid black;
+        border-right: 7px solid var( --secondary-color);
+         border-bottom: 7px solid var( --secondary-color);
          border-radius:10px 0 10px 0;
 @media(max-width:992px){
-    margin-left: 4.5rem;
-
+    margin-left: 1rem;
+    height: 100%;
+    width: 80%;
 }
         
         }
@@ -269,12 +278,13 @@ margin:0 2rem;
             width: 50%;
             height: 50%;
             display: flex;
-            border-right: 7px solid black;
-            border-bottom: 7px solid black;
+            border-right: 7px solid var( --secondary-color);
+            border-bottom: 7px solid var( --secondary-color);
             border-radius:10px 0 10px 0;
             @media(max-width:992px){
-                margin-left: 4rem;
-
+                /* margin-left: 1rem; */
+height: 100%;
+width: 100%;
             
             }
         }
