--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -69,32 +69,29 @@
                 left: 0;
                 bottom: 0;
                 /* padding: 0; */
-                background: var(--bg-color);
+                background: var(--primary-color);
                 z-index: 9999;
                 transform: translateX(-250px);
                 transition: all 0.3s ease-in-out;
-            
 
                 &.active{
                     max-width: 250px;
                     min-width: 290px;
                     padding: 2rem;
                     box-sizing: border-box;
-                    transform: translateY(0px);
-
-                    
+                    transform: translateY(0px); 
                 }
             }
             & ul{
                 margin: 0;
                 padding: 0;
+                text-align: center;
             }
             & li{
                 list-style: none;
                 display: inline-block;
                 position: relative;
                 padding: 1rem;
-
                 @media(max-width:992px){
                     display: block;
                     padding: 0;
@@ -105,12 +102,14 @@
                     padding: 0.675rem 0;
                     font-size: 1.1rem;
                     font-weight: 500;
-                    color:black;
+                    color: black;
                     cursor: pointer;
-
+                    background-color: var(--secondary-color);
+border-radius: 8%;
                     @media(max-width:992px){
                         padding: 1rem 0;
                         display: block;
+                    color: white;
                         /* padding: 0; */
                     }
 
