--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -2,7 +2,7 @@
       height: auto;
       position:relative;
       @media(max-width:992px){
-        height: 20vh;
+        height: 250vh;
         
       }
     .head{
@@ -16,7 +16,6 @@ height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-size:50rem;
-    
 
 }
 .col {
@@ -29,6 +28,16 @@ background-size: cover;
     /* height: 90%;  */
     /* backdrop-filter: blur(2px);  */
     /* z-index: 1;  */
+    @media(max-width: 992px){
+        background-size: cover;
+        height: 20vh;
+    }
+    & h3{
+        @media(max-width: 992px){
+            background-size: cover;
+            height: 15vh;
+        }
+    }
 }
 .containerr{
         width:auto;
@@ -42,7 +51,9 @@ background-size: cover;
         flex-direction: column;
         /* margin-left: 0;
     padding: 0; */
-    margin-right: 2rem;
+    /* margin-right: 2rem; */
+    margin: 0;
+    padding: 0;
     }
 .col2{
     /* overflow: hidden;
@@ -59,11 +70,17 @@ background-size: cover;
     width: 100%;
     flex-direction: column;
     margin-bottom: 10rem;
+    margin-top: 0;
 }
     & h3{
         margin: 2rem;
         text-align: justify;
         line-height: 3rem;
+
+        @media(max-width: 992px){
+    text-align: left;
+
+        }
     }
     & h4{
         text-align: justify;
@@ -86,7 +103,7 @@ margin-top: 3rem;
     flex-direction: column;
     /* justify-content: center; */
     margin: 0;
-    height: 100%;
+    height: 50%;
     padding: 0;
 
 
@@ -101,7 +118,10 @@ margin-top: 3rem;
         height: 100%;
 border-radius:0 10%;
 @media(max-width:992px){
-    margin-top: 130%;
+    /* margin-top: 130%; */
+    margin-top: 10%;
+    margin-left: 20%;
+    padding: 0;
 }
         & img{
             justify-content: center;
@@ -112,52 +132,44 @@ border-radius:0 10%;
             margin-left: 10%;
     width: 100%;
     height: 90%;
-    border-radius:0 10% 0 0;
+    border-radius:0 10% 0 10%;
+    margin-top: 1rem;
         }
     }
-    .imgtwo{
-        /* width: 32%;
-        height: 32%; */
-        background-color:var(--secondary-color);
-        ;
+    .imgtwo {
+        background-color: var(--secondary-color);
         width: 53%;
         height: 70%;
         margin-top: 2rem;
         margin-left: 20rem;
-border-radius:10% 0;
-display: flex;
-/* justify-items: right; */
-/* justify-content: end; */
-@media(max-width:992px){
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* width: 50%; */
-    /* margin: 4rem; */
-    margin-left: 9rem;
-    padding: 0;
-   
-   
-}
-        & img{
-            justify-content: center;
-            /* margin:1rem; */
-            margin-bottom: 2rem;
-            display: flex;
-            align-items: center;
-            margin-right:10%;
-    width: 90%;
-    height: 90%;
-    border-radius:10% 0 0 0;
-    /* justify-content: flex-r; */
-    @media(max-width:992px){
-        width: 90%;
-        height: 50%;
-        padding: 0;
-        /* margin: 0; */
-    }
+        border-radius: 10% 0;
+      
+        @media (max-width: 992px) {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          margin-left: 6rem;
+          padding: 0;
         }
-    }
+      
+        & img {
+          margin-bottom: 2rem;
+          display: flex;
+          align-items: center;
+          margin-right: 10%;
+          width: 95%; /* Increase width to extend outside the container */
+          height: 90%;
+          border-radius: 10% 0 10% 0;
+          margin-left: -5%; /* Adjust the negative margin as needed */
+      margin-top: 1rem;
+          @media (max-width: 992px) {
+            width: 95%;
+            height: 50%;
+            padding: 0;
+          }
+        }
+      }
+      
 }
 }
 .title{
@@ -182,7 +194,13 @@ display: flex;
     justify-content: space-around;
     align-items: center;
     backdrop-filter: blur(2px); 
-  }
+
+    @media(max-width:992px){
+        margin-top: 5rem;
+        display: flex;
+    justify-content: space-around;
+    }
+}
   
   .contact, .categories{
     width: 48%; /* Adjust the width as needed */
@@ -191,7 +209,9 @@ display: flex;
     text-align: center;
     margin-top: 2rem;
    margin-bottom: 7rem;
-   
+   @media(max-width: 992px){
+    
+   }
         border-radius: 20px;
     & h3{
         /* color: white; */
@@ -200,6 +220,10 @@ display: flex;
         background-color: rgb(255, 255, 255);
         border-radius: 10px;
         margin-top: 4.5rem;
+        @media(max-width: 992px){
+    background-color: #d3bfa0;
+    font-size: 1.3rem;
+        }
     }
    
   }
@@ -213,6 +237,10 @@ display: flex;
             height: 100%;
             width: 100%;
         }
+
+        @media(max-width: 992px){
+            background-size: cover;
+        }
   }
   .categories{
     height: 400px; 
@@ -223,12 +251,31 @@ display: flex;
     font-size: 2rem;
     margin-bottom: 15px;
     color: black;
+
+   
+    @media(max-width: 992px){
+       margin: 0;
+       padding: 0;
+    }
+
   }
   @media (max-width: 768px) {
     .contact,
     .categories {
-      width: 100%; 
-      margin: 2rem;/* Full width on smaller screens */
+      width: 45%; 
+    height: 20%;
+    margin-top: 5rem;
+      background-size: cover;
+    
+        margin: 0;
+        padding: 0;
+     /* Full width on smaller screens */
     }
 }
 }
+
+
+
+
+
+
