--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,4 +1,8 @@
 /* Contact CSS */
+
+.ricee{
+color: #6d4005;
+}
 #contact{
     padding:3rem 0;
     /* margin-top: 50rem; */
@@ -104,13 +108,18 @@ margin-bottom: 2.5rem;
     /* margin: 1rem; */
     & h3{
         font-size: 2rem;
+        
     }
     & h4{
         font-size: 1.3rem;
         padding: 1rem 0;
         margin-bottom: 1rem;
+        
     }
-
+    & a{
+        text-decoration: none;
+        color: black;
+    }
 }
             & img{
                 border-radius: 2.1429rem;
