--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -43,6 +43,11 @@
   justify-content: space-between;
 margin-bottom: 3rem;
 margin-right: 30rem;
+@media(max-width:992px){
+    margin: 2rem;
+    /* margin-bottom:30px; */
+
+}
         & h3{
             margin-bottom: 15px;
         }
