--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -9,7 +9,7 @@
     /* box-sizing: border-box; */
     @media (max-width:767px){
         padding:3rem 0 0;
-        min-height: 180vh; 
+        min-height: 250vh; 
     }
 
     .banner_image{
@@ -136,9 +136,9 @@
            /* background-color: var(--primary-nav-color); */
             /* color: white; */
             & h4{
-                margin-left:5px;
+                margin-left:2px;
                 margin-right: 10px;
-                font-size: 19px;
+                font-size: 18px;
             }
             
             @media (max-width:992px){
@@ -176,6 +176,11 @@
             @media(max-width:992px){
                 display: flex;
                 flex-direction: column;
+                left: 0;
+                right: 0;
+                margin: 0;
+                padding: 0;
+                /* height: 10vh; */
             }
             .sub_banner_image{
                 margin-top:3.2rem;
@@ -184,6 +189,13 @@
                 margin-right: 7.3rem;
                 /* display: flex;
                 justify-content: flex-end; */
+                @media(max-width:992px){
+                    margin: 1rem;
+                    padding-bottom: 0;
+                    padding: 0;
+                    /* margin-bottom:30px; */
+
+                }
                 & img{
                 border-radius: 0 40px 0 40px;
 
@@ -194,6 +206,12 @@
                     max-width: 90%;
                     height: 100%;
                     /* padding-bottom: 15px; */
+                    @media(max-width:992px){
+                        max-width: 100%;
+                        height: 100%;
+                        /* margin-bottom:30px; */
+
+                    }
                 }
 
                 & h4{
@@ -226,9 +244,13 @@
                 color: white;
                 /* margin-right: 0.1rem; */
                 /* padding-bottom:12px; */
-                @media(max-width: 992px){
-                    margin-bottom: 2rem;
-                 }
+                @media(max-width:992px){
+                    margin:0 1.5rem;
+                    padding-top: 0;
+                    padding: 0;
+                    /* margin-bottom:30px; */
+
+                }
                 & img{
                     border-radius: 0 40px 0 40px;
 
@@ -242,7 +264,7 @@
                     height: 60%;
                     /* margin-bottom: 20px; */
                     @media(max-width:992px){
-                        max-width: 100%;
+                        width: 100%;
                         height: 100%;
                         /* margin-bottom:30px; */
 
