--- a/src/components/manufacturing/Manufacture.css
+++ b/src/components/manufacturing/Manufacture.css
@@ -8,6 +8,7 @@ justify-content: space-between;
     justify-content: center;
     align-items: center;
 } */
+
 .hero{
     /* height: 20%; */
     display: flex;
@@ -17,23 +18,42 @@ justify-content: space-between;
     /* padding-left: 15rem; */
     border-right: 25px;
     /* background-color: black; */
-    border-color: black;
+    border-color:var( --secondary-color);
     margin-bottom: 10rem;
     margin-top: 4rem;
     margin-left: 10rem;
     /* margin: 1rem; */
     @media(max-width:992px){
+        display: flex;
+        flex-direction: column;
         margin: 0;
         padding: 0;
         margin-top: 4rem;
+        justify-content: flex-end;
     }
     .description{
         margin: 1rem;
-
+        /* width: 100%; */
+        @media(max-width: 992px){
+            margin: 0;
+            padding: 0;
+            /* height: 10%; */
+        }
+        & h3{
+            @media(max-width: 992px){
+                font-size: 2rem;
+                width: 100%;
+            }
+        }
         & p{
             text-align: justify;
             font-size: 2rem;
+            @media(max-width: 992px){
+                font-size: 1.5rem;
+                line-height: 24px;
+            }
         }
+       
     }
     .heroonee{ 
         /* margin: 2rem; */
@@ -41,16 +61,29 @@ justify-content: space-between;
         position: relative;
         /* width: 40%; */
         margin-left: 20rem;
-
+@media(max-width:992px){
+    margin: 0;
+    padding: 0;
+}
         & img{
         width: 60%;
         /* height: 20%; */
         display: flex;
-     border-right: 7px solid black;
-     border-bottom: 7px solid black;
+     border-right: 7px solid var( --secondary-color);
+     border-bottom: 7px solid var( --secondary-color);
      border-radius:10px 0 10px 0;
+     margin-top: 2rem;
 @media(max-width:992px){
-margin-left: 4.5rem;
+/* margin-left: 4.5rem; */
+margin: 0;
+padding: 0;
+right: 0;
+width: 90%;
+height: 50%;
+margin-top: 3rem;
+margin-left: 1.5rem;
+/* margin-bottom: 5rem; */
+/* margin-right: 10rem; */
 
 }
     
@@ -62,19 +95,31 @@ margin-left: 4.5rem;
     position: relative;
     /* width: 40%; */
     margin-left: 9rem;
-
+@media(max-width:992px){
+    margin: 0;
+    padding: 0;
+    padding-left: 8px;
+}
     & img{
     width: 60%;
     /* height: 20%; */
     display: flex;
- border-right: 7px solid black;
- border-bottom: 7px solid black;
+ border-right: 7px solid var( --secondary-color);
+ border-bottom: 7px solid var( --secondary-color);
  border-radius:10px 0 10px 0;
  margin: 0;
-@media(max-width:992px){
-margin-left: 4.5rem;
-
-}
+ @media(max-width:992px){
+    /* margin-left: 4.5rem; */
+    margin: 0;
+    padding: 0;
+    left: 0;
+    /* right: 0; */
+    width: 100%;
+    height: 80%;
+    /* margin-left: 2rem; */
+    /* margin-right: 10rem; */
+    
+    }
 
 }
 }
@@ -84,19 +129,31 @@ margin-left: 4.5rem;
     position: relative;
     /* width: 40%; */
     margin-left: 24rem;
-
+    @media(max-width:992px){
+        margin: 0;
+        padding: 0;
+        padding-left: 8px;
+    }
     & img{
     width: 60%;
     height: 100%;
     /* height: 20%; */
     display: flex;
- border-right: 7px solid black;
- border-bottom: 7px solid black;
+ border-right: 7px solid var( --secondary-color);
+ border-bottom: 7px solid var( --secondary-color);
  border-radius:10px 0 10px 0;
-@media(max-width:992px){
-margin-left: 4.5rem;
-
-}
+ @media(max-width:992px){
+    /* margin-left: 4.5rem; */
+    margin: 0;
+    padding: 0;
+    left: 0;
+    /* right: 0; */
+    width: 100%;
+    height: 100%;
+    /* margin-left: 2rem; */
+    /* margin-right: 10rem; */
+    
+    }
 
 }
 }
@@ -106,19 +163,31 @@ margin-left: 4.5rem;
     position: relative;
     /* width: 40%; */
     margin-left: 30rem;
-
+    @media(max-width:992px){
+        margin: 0;
+        padding: 0;
+        padding-left: 8px;
+    }
     & img{
     width: 60%;
     height: 100%;
     /* height: 20%; */
     display: flex;
- border-right: 7px solid black;
- border-bottom: 7px solid black;
+ border-right: 7px solid var( --secondary-color);
+ border-bottom: 7px solid var( --secondary-color);
  border-radius:10px 0 10px 0;
-@media(max-width:992px){
-margin-left: 4.5rem;
-
-}
+ @media(max-width:992px){
+    /* margin-left: 4.5rem; */
+    margin: 0;
+    padding: 0;
+    left: 0;
+    /* right: 0; */
+    width: 100%;
+    height: 100%;
+    /* margin-left: 2rem; */
+    /* margin-right: 10rem; */
+    
+    }
 
 }
 }
@@ -128,17 +197,62 @@ margin-left: 4.5rem;
     position: relative;
     /* width: 40%; */
     margin-left: 28rem;
-
+    @media(max-width:992px){
+        margin: 0;
+        padding: 0;
+        padding-left: 8px;
+    }
     & img{
     width: 60%;
     height: 100%;
     /* height: 20%; */
     display: flex;
- border-right: 7px solid black;
- border-bottom: 7px solid black;
+ border-right: 7px solid var( --secondary-color);
+ border-bottom: 7px solid var( --secondary-color);
+ border-radius:10px 0 10px 0;
+ @media(max-width:992px){
+    /* margin-left: 4.5rem; */
+    margin: 0;
+    padding: 0;
+    left: 0;
+    /* right: 0; */
+    width: 100%;
+    height: 100%;
+    /* margin-left: 2rem; */
+    /* margin-right: 10rem; */
+    
+    }
+
+}
+}
+.heroooonee{ 
+    /* margin: 2rem; */
+    right: 0;
+    position: relative;
+    /* width: 40%; */
+    margin-left: 20rem;
+@media(max-width:992px){
+margin: 0;
+padding: 0;
+}
+    & img{
+    width: 60%;
+    /* height: 20%; */
+    display: flex;
+ border-right: 7px solid var( --secondary-color);
+ border-bottom: 7px solid var( --secondary-color);
  border-radius:10px 0 10px 0;
 @media(max-width:992px){
-margin-left: 4.5rem;
+/* margin-left: 4.5rem; */
+margin: 0;
+padding: 0;
+right: 0;
+width: 90%;
+height: 50%;
+margin-top: 3rem;
+margin-left: 1.5rem;
+margin-bottom: 5rem;
+/* margin-right: 10rem; */
 
 }
 
