--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,50 +1,77 @@
 /* Contact CSS */
 
-.ricee{
-color: #6d4005;
+.ricee {
+    color: #6d4005;
 }
-#contact{
-    padding:3rem 0;
+
+#contact {
+    padding: 3rem 0;
+
     /* margin-top: 50rem; */
-    .contact_wrapper{
-        display:flex;
-        justify-content:space-between;
+    .contact_wrapper {
+        display: flex;
+        justify-content: space-between;
         /* margin-top:4rem; */
         flex-wrap: wrap;
 
-        @media (max-width:992px){
+        @media (max-width:992px) {
             justify-content: center;
         }
-        @media (max-width:767px){
+
+        @media (max-width:767px) {
             flex-direction: column;
         }
 
-        .contact_col{
-            width:calc(100% / 2 - 1rem);
-            padding:1rem;
-            box-sizing:border-box;
-/* margin-bottom: 2rem; */
+        .contact_col {
+            width: calc(100% / 2 - 1rem);
+            padding: 1rem;
+            box-sizing: border-box;
+            /* margin-bottom: 2rem; */
 
-& h2{
-margin-bottom: 2.5rem;
-}
-            @media (max-width:992px){
-                width:100%
+            & h2 {
+                margin-bottom: 2.5rem;
             }
-            @media (max-width:767px){ 
-                width:100%;
+
+            @media (max-width:992px) {
+                width: 100%
+            }
+
+            @media (max-width:767px) {
+                width: 100%;
             }
 
 
         }
-        .container{
+
+        .container {
             width: 100%;
-          
+            @media(max-width: 992px) {
+                width: 100%;
+            }
+            .input_wrapper{
+                width: 100%;
+
+                #msgContent{
+                    width: 100%;
+
+                    @media(max-width: 992px){
+                        width: 100%;
+                    }
+                }
+
+                
+            .form-control{
+                width: 100%;
+            }
+            }
         }
-        .containerr{
+
+        .containerr {
             width: 100%;
             padding: 1rem;
-            & button{
+
+       
+            & button {
                 background-color: transparent;
                 border: 0;
                 cursor: pointer;
@@ -53,7 +80,8 @@ margin-bottom: 2.5rem;
                 color: black;
             }
         }
-        .alert{
+
+        .alert {
             width: 100%;
             background: rgb(180, 136, 50);
             padding: 10px 20px;
@@ -64,101 +92,117 @@ margin-bottom: 2.5rem;
             font-weight: 900;
             display: none;
         }
-        .input_wrapper{
-            width:100%;
+
+        .input_wrapper {
+            width: 100%;
             display: flex;
-@media(max-width:992px){
-    width: 100%;
-}
-            .form-control{
-                width:100%;
-                background-color:transparent;
-                border:.0714rem solid black;
-                color:black;
-                font-size:1.0714rem;
+
+            @media(max-width:992px) {
+                width: 100%;
+            }
+
+            .form-control {
+                width: 100%;
+                background-color: transparent;
+                border: .0714rem solid black;
+                color: black;
+                font-size: 1.0714rem;
                 font-weight: 400;
-                padding:.7143rem 1.4286rem;
+                padding: .7143rem 1.4286rem;
                 border-radius: .5714rem;
-                margin-bottom:3rem;
-                @media(max-width:992px){
+                margin-bottom: 3rem;
+
+                @media(max-width:992px) {
                     width: 100%;
                 }
             }
 
-            & textarea{
-                width:100%;
-                display:block;
-                background-color:transparent;
-                border:.0714rem solid black;
-                color:black;
-                font-size:1.0714rem;
+            & textarea {
+                width: 100%;
+                display: block;
+                background-color: transparent;
+                border: .0714rem solid black;
+                color: black;
+                font-size: 1.0714rem;
                 font-weight: 400;
-                padding:.7143rem 1.4286rem;
-                border-radius: .5714rem; 
+                padding: .7143rem 1.4286rem;
+                border-radius: .5714rem;
                 min-height: 7.1429rem;
             }
 
             .form-control:hover,
             & textarea:hover,
             .form-control:focus,
-            & textarea:focus{
-                border-color:var(--primary-nav-color);
-                color:black;
+            & textarea:focus {
+                border-color: var(--primary-nav-color);
+                color: black;
             }
         }
-        .btn_wrapper{
-            margin-top:2rem;
+
+        .btn_wrapper {
+            margin-top: 2rem;
         }
-        .contact_image{
-            position:relative;
+
+        .contact_image {
+            position: relative;
             /* background: url('../../assets/contact/360_F_307854286_KWyoR5ACR7UzYql8McJd2Y5kYmmVz6t9.jpg'); */
             background-repeat: no-repeat;
             background-size: cover;
             overflow: hidden;
 
 
-            &:after{
+            &:after {
                 content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('../../assets/contact/360_F_307854286_KWyoR5ACR7UzYql8McJd2Y5kYmmVz6t9.jpg') center/cover;
-  backdrop-filter: blur(2px);
-  filter: blur(2px);
-  z-index: -1; /* Place the pseudo-element behind the content */
-}
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: url('../../assets/contact/360_F_307854286_KWyoR5ACR7UzYql8McJd2Y5kYmmVz6t9.jpg') center/cover;
+                backdrop-filter: blur(2px);
+                filter: blur(2px);
+                z-index: -1;
+                /* Place the pseudo-element behind the content */
+            }
 
-            @media (max-width: 1024px){
-                &:after{
-                    right:0;
+            @media (max-width: 1024px) {
+                &:after {
+                    right: 0;
                 }
-            } 
-& h2{
-    padding:0.8rem 0.5rem 0;
-}
-.cone ,.ctwo ,.cthree, .cfour{
-    /* margin: 1rem; */
-    & h3{
-        font-size: 2rem;
-        
-    }
-    & h4{
-        font-size: 1.3rem;
-        padding: 1rem 0;
-        margin-bottom: 1rem;
-        
-    }
-    & a{
-        text-decoration: none;
-        color: black;
-    }
-}
-            & img{
+            }
+
+            & h2 {
+                padding: 0.8rem 0.5rem 0;
+            }
+
+            .cone,
+            .ctwo,
+            .cthree,
+            .cfour {
+
+                /* margin: 1rem; */
+                & h3 {
+                    font-size: 2rem;
+
+                }
+
+                & h4 {
+                    font-size: 1.3rem;
+                    padding: 1rem 0;
+                    margin-bottom: 1rem;
+
+                }
+
+                & a {
+                    text-decoration: none;
+                    color: black;
+                }
+            }
+
+            & img {
                 border-radius: 2.1429rem;
-                position:relative;
-                z-index:2;
+                position: relative;
+                z-index: 2;
                 max-width: 85%;
             }
         }
